# pagure-hs

./: CHANGELOG.md  Makefile  README.md  pagure-hs.cabal  pagure.cabal  stack-lts14.yaml  stack-lts16.yaml  stack.yaml
.github/workflows/: build.yml
src/: PagureHs.hs
src/Fedora/: Pagure.hs
src/Web/Fedora/: Pagure.hs
