cabal-version:       1.22
name:                pagure
version:             0.0.1
synopsis:            Pagure REST client library
description:         A library for querying Pagure gitforges via REST.
homepage:            https://github.com/juhp/pagure-hs
bug-reports:         https://github.com/juhp/pagure-hs/issues
license:             GPL-2
license-file:        LICENSE
author:              Jens Petersen
maintainer:          Jens Petersen <petersen@redhat.com>
copyright:           2020 Jens Petersen
category:            Network
build-type:          Simple
extra-doc-files:     README.md
                     CHANGELOG.md
tested-with:         GHC == 8.0.2
                     GHC == 8.2.2
                     GHC == 8.4.4
                     GHC == 8.6.5
                     GHC == 8.8.3

source-repository head
  type:                git
  location:            https://github.com/juhp/pagure-hs.git

flag microlens
  description:       Use smaller microlens instead of lens
  default:           False

library
  build-depends:       aeson
                     , base >= 4 && < 5
                     , http-query
                     , text
  if flag(microlens)
      build-depends:   microlens, microlens-aeson
  else
      build-depends:   lens, lens-aeson
  hs-source-dirs:      src
  exposed-modules:     Fedora.Pagure

  ghc-options:         -Wall
  if impl(ghc >= 8.0)
    ghc-options:       -Wcompat
                       -Widentities
                       -Wincomplete-uni-patterns
                       -Wincomplete-record-updates
                       -Wredundant-constraints
  if impl(ghc >= 8.2)
    ghc-options:       -fhide-source-paths
  if impl(ghc >= 8.4)
    ghc-options:       -Wmissing-export-lists
                       -Wpartial-fields

  default-language:    Haskell2010
  default-extensions:  OverloadedStrings
